Fixed ref to -testing in `tag_prod`

--- a/.github/workflows/tag_prod.yaml
+++ b/.github/workflows/tag_prod.yaml
@@ -28,7 +28,7 @@ jobs:
         echo ::set-env name=MY_BRANCH::${{ github.event.pull_request.head.ref }}
         echo ::set-env name=MY_REF::$${{ github.event.pull_request.head.ref }}
         echo ::set-env name=APP_VERSION_NUM::$(sed -n '/module-version:/{n;p;}' kbase.yml | sed 's/ //g')
-        echo ::set-env name=TEST_APP::$(echo ${GITHUB_REPOSITORY}/$(echo $GITHUB_REPOSITORY | awk -F / '{print $2}' | sed -e "s/:refs//")"-testing")
+        echo ::set-env name=TEST_APP::$(echo ${GITHUB_REPOSITORY}/$(echo $GITHUB_REPOSITORY | awk -F / '{print $2}' | sed -e "s/:refs//")"-dev")
         echo ::set-env name=MY_PROD_APP::$(echo ${GITHUB_REPOSITORY}/$(echo $GITHUB_REPOSITORY | awk -F / '{print $2}' | sed -e "s/:refs//")"-prod")
 
 
